--- a/templates/admin/solped.html
+++ b/templates/admin/solped.html
@@ -58,7 +58,7 @@
 const planes = JSON.parse(document.getElementById('planes-data').textContent);
 
 function formSolped() {
-  let options = `<option value="">-- Selecciona Plan de Producción --</option>`;
+  let options = `<option value="">-- Selecciona Plan de Producción  --</option>`;
   planes.forEach(p => {
     options += `<option value="${p.id}">${p.nombre} - ${p.fert}</option>`;
   });
@@ -66,13 +66,13 @@ function formSolped() {
   Swal.fire({
     title: 'Nueva SOLPED',
     html: `
-      <label>Plan Producción:</label>
+      <h5 class="text-start">Plan Producción :</h5>
       <select id="plan_id" class="form-control mb-2" onchange="loadInsumos()">${options}</select>
 
-      <label>Seleccionar Insumos:</label>
+      <h5 class="text-start">Seleccionar Insumos:</h5>
       <div id="insumosSeleccion"></div>
 
-      <h6 class="mt-3">✅ Insumos Añadidos:</h6>
+      <h5 class="mt-3 text-start">✅ Insumos Añadidos:</h5>
       <table class="table table-bordered" id="tablaInsumos">
         <thead><tr><th>Insumo</th><th>Cantidad</th><th>Unidad</th><th>Costo</th><th></th></tr></thead>
         <tbody></tbody>
