--- a/templates/admin/bom.html
+++ b/templates/admin/bom.html
@@ -27,7 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ fert.nombre }}</h5>
                     <p class="card-text"><strong>Código:</strong> {{ fert.codigo }}</p>
-                    <p class="card-text"><strong>Centro:</strong> {{ fert.centro.nombre }}</p>
+                    <p class="card-text"><strong>Sede:</strong> {{ fert.centro.nombre }}</p>
                     <p class="card-text"><strong>Unidad Base:</strong> {{ fert.unidad_base }}</p>
                     <p class="card-text"><strong>Precio:</strong> S/. {{ fert.precio }}</p>
 
@@ -88,9 +88,9 @@ function formFERT(id = null, codigo = '', nombre = '', unidad_base = 'KG', preci
 
     let opcionesCentros = `
         <div style="text-align:left; margin-top:10px;">
-            <label for="centro_id" style="font-weight:bold; display:block; margin-bottom:5px;">Seleccione Centro:</label>
+            <label for="centro_id" style="font-weight:bold; display:block; margin-bottom:5px;">Seleccione Sede:</label>
             <select id="centro_id" class="swal2-input" style="width:100%; display:block;">
-                <option value="">-- Seleccione un centro --</option>
+                <option value="">-- Seleccione una sede --</option>
                 {% for sede in sedes %}
                     <option value="{{ sede.id }}">{{ sede.nombre }}</option>
                 {% endfor %}
