--- a/templates/admin/movimientos.html
+++ b/templates/admin/movimientos.html
@@ -75,7 +75,7 @@ function formMovimiento() {
           </div>
         </div>
 
-        <div class="row">
+        <div class="row d-none">
           <div class="col-md-12">
             <label class="form-label">Motivo:</label>
             <input id="motivo" type="text" class="form-control mb-2" placeholder="Motivo (opcional)">
